# M2_modelisation

./: .gitignore  CMakeLists.txt  QtCreatorProject.pro
AppTinyMesh/Include/: HitInfo.h  box.h  bvh.h  implicits.h  mathematics.h  mesh.h  qte.h  ray.h  realtime.h  triangle.h
AppTinyMesh/Include/SDF/: SDF.h  SDFIntersection.h  SDFSmoothDifference.h  sdfunion.h
AppTinyMesh/Include/SDF/backup_sdf_polymorphic_files/: SDFSmoothUnion.h  SphereSDF.h  TorusSDF.h
AppTinyMesh/Include/bezier/: beziercurve.h  beziersurface.h  revolution.h
AppTinyMesh/Include/gKit/: vec.h
AppTinyMesh/Source/: bvh.cpp  bvh.h  evector.cpp  implicits.cpp  interface.ui  main.cpp  mesh-widget.cpp  mesh.cpp  meshcolor.cpp  qtemainwindow.cpp  ray.cpp  triangle.cpp  triangle.h  ui_interface.h
AppTinyMesh/Source/SDF/: SDF.cpp  SDFDifference.h  SDFSmoothUnion.cpp  SphereSDF.cpp  TorusSDF.h
AppTinyMesh/Source/SDF/backup_sdf_polymorphic_files/: SDFDifference.cpp  SDFIntersection.cpp  SDFSmoothDifference.cpp  TorusSDF.cpp  sdfunion.cpp
AppTinyMesh/Source/bezier/: beziercurve.cpp  beziersurface.cpp  revolution.cpp
AppTinyMesh/Source/gKit/: vec.cpp
AppTinyMesh/UI/: interface.ui
rapport/: Implicit.tex  Rapport.tex
rapport/Benchmark/: remesh.gnu
rapport/Implicits/: Implicit.tex  Rapport.tex
rapport/Surfaces_Deformations/: Rapport.tex  TP.tex
